# espnow-link-led-controller

./: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s2
main/: CMakeLists.txt  Kconfig.projbuild  button.c  button.h  encoder.c  encoder.h  encoder_ac_mode.c  encoder_ac_mode.h  encoder_ic_mode.c  encoder_ic_mode.h  encoder_rgbw_mode.c  encoder_rgbw_mode.h  idf_component.yml  led_controller.c  led_controller.h  link_handler.c  link_handler.h  main.c  mode.c  mode.h  nvs_manager.c  nvs_manager.h
